Add model tests and cleanup models and interfaces

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This bundle provides subscription features.",
     "license": "MIT",
     "require": {
-        "php": "^7.0",
+        "php": "^7.1",
         "softspring/crudl-bundle": "^1.0.1",
         "softspring/customer-bundle": "^1.1@dev",
         "softspring/doctrine-templates": "^1.0.4"
@@ -11,6 +11,14 @@
     "autoload": {
         "psr-4": {
             "Softspring\\SubscriptionBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/tests/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Softspring\\SubscriptionBundle\\Tests\\": "tests/"
         }
     },
     "extra": {
@@ -25,5 +33,12 @@
         "softspring/admin-bundle": "Use softspring admin templates",
         "softspring/core-bundle": "Use softspring core bundle",
         "stripe/stripe-php": "Add Stripe php client library if you want to set stripe as driver"
+    },
+    "require-dev": {
+        "symfony/http-kernel": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "phpunit/phpunit": "^9.1",
+        "doctrine/common": "^2.12",
+        "stripe/stripe-php": "^7.31"
     }
 }
