--- a/Resources/config/services/adapter/stripe.yaml
+++ b/Resources/config/services/adapter/stripe.yaml
@@ -4,27 +4,27 @@ services:
         autoconfigure: true
         public: false
         bind:
-            $apiSecretKey: '%sfs_customer.adapter.stripe.apiSecretKey%'
+            $apiSecretKey: '%sfs_platform.stripe.secret_key%'
             $webhookSigningSecret: '%sfs_customer.adapter.stripe.webhookSigningSecret%'
             $logger: '@?monolog.logger.stripe'
 
     Softspring\SubscriptionBundle\Platform\Adapter\SubscriptionAdapterInterface:
-        class: Softspring\SubscriptionBundle\Platform\Adapter\Stripe\SubscriptionAdapter
+        class: Softspring\PlatformBundle\Stripe\Adapter\SubscriptionAdapter
         calls:
             - ['setItemManager', ['@Softspring\SubscriptionBundle\Manager\SubscriptionItemManagerInterface']]
             - ['setPlanManager', ['@Softspring\SubscriptionBundle\Manager\PlanManagerInterface']]
         tags:
-          - { name: 'sfs_customer.platform.adapter', alias: 'subscription' }
+          - { name: 'sfs_platform.adapter', alias: 'subscription' }
 
     Softspring\SubscriptionBundle\Platform\Adapter\PlanAdapterInterface:
-        class: Softspring\SubscriptionBundle\Platform\Adapter\Stripe\PlanAdapter
+        class: Softspring\PlatformBundle\Stripe\Adapter\PlanAdapter
         tags:
-          - { name: 'sfs_customer.platform.adapter', alias: 'plan' }
+          - { name: 'sfs_platform.adapter', alias: 'plan' }
 
     Softspring\SubscriptionBundle\Platform\Adapter\ProductAdapterInterface:
-        class: Softspring\SubscriptionBundle\Platform\Adapter\Stripe\ProductAdapter
+        class: Softspring\PlatformBundle\Stripe\Adapter\ProductAdapter
         tags:
-          - { name: 'sfs_customer.platform.adapter', alias: 'product' }
+          - { name: 'sfs_platform.adapter', alias: 'product' }
 
     Softspring\SubscriptionBundle\EventListener\StripeSubscriptionListener:
         tags: ['kernel.event_subscriber']
