--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev"
+            "dev-master": "1.4-dev"
         }
     },
     "conflict": {
@@ -32,7 +32,8 @@
     "suggest": {
         "softspring/admin-bundle": "Use softspring admin templates",
         "softspring/core-bundle": "Use softspring core bundle",
-        "stripe/stripe-php": "Add Stripe php client library if you want to set stripe as driver"
+        "softspring/platform-bundle": "Integrate external platforms",
+        "softspring/stripe-platform": "Integrate stripe platform"
     },
     "require-dev": {
         "symfony/http-kernel": "^5.0",
