--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Softspring\\SubscriptionBundle\\Tests\\": "tests/"
+            "Softspring\\SubscriptionBundle\\Tests\\": "Tests/"
         }
     },
     "extra": {
