--- a/Resources/config/services/controller/admin_products.yaml
+++ b/Resources/config/services/controller/admin_products.yaml
@@ -9,13 +9,13 @@ services:
         tags: ['controller.service_arguments']
 
     Softspring\SubscriptionBundle\Form\Admin\ProductListFilterFormInterface:
-        alias: 'Softspring\SubscriptionBundle\Form\Admin\ProductListFilterForm'
+        class: 'Softspring\SubscriptionBundle\Form\Admin\ProductListFilterForm'
 
     Softspring\SubscriptionBundle\Form\Admin\ProductCreateFormInterface:
-        alias: 'Softspring\SubscriptionBundle\Form\Admin\ProductCreateForm'
+        class: 'Softspring\SubscriptionBundle\Form\Admin\ProductCreateForm'
 
     Softspring\SubscriptionBundle\Form\Admin\ProductUpdateFormInterface:
-        alias: 'Softspring\SubscriptionBundle\Form\Admin\ProductUpdateForm'
+        class: 'Softspring\SubscriptionBundle\Form\Admin\ProductUpdateForm'
 
     sfs_subscription.admin.product.controller:
         class: Softspring\CrudlBundle\Controller\CrudlController
