--- a/Resources/config/services/controller/admin_subscriptions.yaml
+++ b/Resources/config/services/controller/admin_subscriptions.yaml
@@ -9,7 +9,7 @@ services:
         tags: ['controller.service_arguments']
 
     Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterFormInterface:
-        alias: 'Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterForm'
+        class: 'Softspring\SubscriptionBundle\Form\Admin\SubscriptionListFilterForm'
 
     sfs_subscription.admin.subscription.controller:
         class: Softspring\CrudlBundle\Controller\CrudlController
